--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ html
     font-style: normal;
 }
 
-@font-face {
+@font-face 
+{
     font-family: 'ralewaybold';
     src: url("fonts/raleway-bold-webfont.eot");
     src: url("fonts/raleway-bold-webfont.eot?#iefix") format('embedded-opentype'),
@@ -51,7 +52,10 @@ html
     padding: 0;
 }
 
-
+span /* span instead of div because inside inline element (a href) */
+{
+    display: block; /* so span behaves as a div */
+}
 
 /* fonts */
 
@@ -61,11 +65,11 @@ body
     color: black;
 }
 
-h1, h2, h3, h4, form
+h1, h2, h3, form
 {
     font-family: 'ralewaybold', 'arial', 'verdana', 'sans-serif';
-    color: black;
 } 
+
 
 ul
 {
@@ -94,10 +98,9 @@ a[href^="mailto"]
 }
 
 
-/* header */
+/* header section */
 
-/* logo + register */
-#header
+header
 {
     width: 100%;
     min-width: 375px;
@@ -109,6 +112,7 @@ a[href^="mailto"]
     font-size: 1em;
 }
 
+/* logo + register */
 #logo 
 {
     width: 100px;
@@ -125,7 +129,7 @@ a[href^="mailto"]
     padding: 0 20px;
 }
 
-#register p
+.blue-text
 {
     color: #0065FC;
     font-family: ralewaybold;
@@ -148,19 +152,19 @@ a[href^="mailto"]
     text-align: center;
 }
 
-.nav-div p
+.anchor-text
 {
     border-bottom: #f2f2f2 solid 3px;
     padding: 15px 0;
 }
 
-.nav-div:focus p
+.nav-div:focus .anchor-text
 {
     border-bottom: #0065FC solid 3px;
     color: #0065FC;
 }
 
-.nav-div:hover p
+.nav-div:hover .anchor-text
 {
     border-bottom: #0065FC solid 3px;
     color: #0065FC;
@@ -200,7 +204,6 @@ input[type=submit] /* hide 'rechercher' button */
     width: 100%;
     max-width: 420px;
     height: 50px;
-    display: block;
     position: relative;
     border-radius: 15px;
     border: solid rgb(220, 220, 220) 1px;
@@ -213,7 +216,6 @@ input[type=search]
     min-width: 220px;
     margin: auto;
     height: 48px;
-    display: block;
     border: none;
     position: absolute;
     left: 50px;
@@ -249,7 +251,6 @@ input[type=search]
     height: 50px;
     background-color: #F2F2F2;
     border-radius: 15px 0 0 15px;
-    display: block;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -259,11 +260,6 @@ input[type=search]
     font-size: 1.2em;
 }
 
-input[type=submit] /* hide 'rechercher' bouton, style button for desktop */
-{
-    visibility: hidden;
-}
-
 #magnifying-glass
 {
     width: 50px;
@@ -271,7 +267,6 @@ input[type=submit] /* hide 'rechercher' bouton, style button for desktop */
     color: white;
     background-color: #0065FC;
     border-radius: 15px;
-    display: block;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,7 +311,6 @@ input[type=checkbox] /* hide default checkbox */
     width: auto;
     height: 50px;
     margin: 5px 10px 5px 0;
-    display: block;
     position: relative;
     border-radius: 25px;
     border: solid rgb(220, 220, 220) 2px;
@@ -355,9 +349,8 @@ input[type=checkbox] /* hide default checkbox */
   margin: 15px 0;
 }
 
-#icon-info
+#info-icon
 {
-    display: block;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -426,7 +419,7 @@ input[type=checkbox] /* hide default checkbox */
     transform: scale(1,1.2);
 }
 
-.div-pop1
+.popular-preview-div
 {
     width: 100%;
     max-width: 450px;
@@ -444,27 +437,26 @@ input[type=checkbox] /* hide default checkbox */
     position: relative;
     display: flex; 
     flex-direction: row; 
-    flex: 0 0 100%;
 }
 
 .popular-preview-img
 {
     width: 100%; 
     max-width: 127px;
-    height: 130px;
+    height: 100%;
     border-radius: 15px 0 0 15px;
     position: relative;
 }
 
-#popular-list img 
+.popular-preview-img img 
 {
     width: 100%; 
-    height: 135px;
+    height: 100%;
     object-fit: cover;
     border-radius: 15px 0 0 15px ;
 }
 
-.popular-text
+.popular-preview-text
 {
     width: 100%;
     margin: 10px 20px;
@@ -473,18 +465,19 @@ input[type=checkbox] /* hide default checkbox */
     justify-content: space-between;
 }
 
-#popular-list h4
+.popular-preview-text .hotel-name
 {
     font-size: 1em;
     margin: 0 0 15px 0;
+    font-weight: bold;
 }
 
-#popular-list p
+.popular-preview-text .hotel-price
 {
     font-size: 0.9em;
 }
 
-#popular-list .fa-star
+.popular-preview-text .fa-star
 {
     font-size: 0.8em;
 }
@@ -496,7 +489,7 @@ input[type=checkbox] /* hide default checkbox */
 
 .grey-icon
 {
-    color: rgb(220, 220, 220);   
+    color: rgb(220, 220, 220); /* background grey is too light */
 }
 
 
@@ -522,7 +515,7 @@ input[type=checkbox] /* hide default checkbox */
     font-size: 1.4em;
 }
 
-.div-acc1
+.accommodation-preview-div
 {
     width: 100%;
     max-width: 450px;
@@ -537,7 +530,7 @@ input[type=checkbox] /* hide default checkbox */
     margin: 5px auto;
     width: 100%;
     max-width: 450px;
-    height: 195px;
+    height: 200px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -550,7 +543,7 @@ input[type=checkbox] /* hide default checkbox */
     border-radius: 15px 15px 0 0 ;
 }
 
-#accommodation-list img
+.accommodation-preview-img img
 {
     width: 100%;
     height: 100%;
@@ -558,39 +551,42 @@ input[type=checkbox] /* hide default checkbox */
     border-radius: 15px 15px 0 0 ;
 }
 
-.accommodation-text
+.accommodation-preview-text
 {
     width: 100%;
     line-height: 1.3em;
-    margin: 5px 10px;
+    margin: 8px 10px;
 }
 
-#accommodation-list h4
+.accommodation-preview-text .hotel-name
 {
 font-size: 1em;
+font-weight: bold;
 }
 
-#accommodation-list p
+.accommodation-preview-text .hotel-price
 {
     font-size: 0.9em;
     margin: 2px 0;
 }
 
-#accommodation-list strong
+.accommodation-preview-text em
 {
     font-weight: bold;
+    font-style: normal;
 }
 
-#accommodation-list .fa-star
+.accommodation-preview-text .fa-star
 {
     font-size: 0.8em;
 }
 
-#accommodation-plus
+#accommodation-show-more
 {
     width: 100%;
     margin: 30px 0 10px 0;
-    font-size: 1em;
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
 
@@ -605,7 +601,6 @@ font-size: 1em;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items:stretch;
     position: relative; 
 }
 
@@ -617,13 +612,13 @@ font-size: 1em;
     font-size: 1.4em;
 }
 
-.div-1
+.activities-1preview-div 
 {
     width: 100%;
     max-width: 450px;
 }
 
-.div-23
+.activities-2previews-div
 {
     width: 100%;
     max-width: 450px;
@@ -633,7 +628,7 @@ font-size: 1em;
     align-items:stretch;
 }
 
-.div-2, .div-3
+.activities-preview-div
 {
     width: 100%;
 }
@@ -661,7 +656,7 @@ font-size: 1em;
     top: 0px;
 }
 
-#activities img
+.activities-preview-img img
 {
     width: 100%;
     height: 100%;
@@ -669,13 +664,14 @@ font-size: 1em;
     border-radius: 20px 20px 0 0 ;
 }
 
-#activities-list h4 
+.activities-preview .activity-name 
 {
     width: 100%;
-    margin: auto; /* important! so h4 vertically aligned when on 2 lines */
-    vertical-align: middle; /* important! so h4 vertically aligned when on 2 lines */
+    margin: auto;
+    vertical-align: middle; 
     padding: 0 15px;
     font-size: 1em;
+    font-weight: bold;
 }
 
 
@@ -715,7 +711,8 @@ font-size: 1em;
 
 /* responsive design */
 
-/* mobile + tablet portrait 375-768px (default) */
+/* SMALL DEVICE
+phone + tablet portrait 375-768px (default) */
 @media all and (min-width:375px)
 {
     body 
@@ -727,7 +724,8 @@ font-size: 1em;
 }
 
 
-/* tablet landscape + large tablet 768-1200px */
+/* MEDIUM DEVICE
+tablet landscape + large tablet 768-992px */
 @media all and (min-width:768px)
 {
 
@@ -740,30 +738,24 @@ font-size: 1em;
 
 
 /* popular section */
-
     /* 2 previews in a row */
-    .div-pop1
+    .popular-preview-div
     {
         width: 47%;
-        max-width: 450px;
         margin: 0 10px;
     }
 
-
 /* accommodation section */
-
     /* 2 previews in a row */   
-    .div-acc1
+    .accommodation-preview-div
     {
         width: 47%;
-        max-width: 450px;
         margin: 0 10px;
     }
 
 /* activities section */
     /* 2 previews in a row */
-    
-    .div-1,.div-23
+    .activities-1preview-div,.activities-2previews-div
     {
         width: 47%;
         margin: 0 10px ;
@@ -772,83 +764,62 @@ font-size: 1em;
     /* different sizes of previews */
     .portrait
     {
-        width: 100%;
         height: 445px;
     }
 
     .small
     {
-        width: 100%;
         height: 165px; 
     }
 
     .smallmedium
     {
-        width: 100%;
         height: 195px;  
     }
 
     .bigmedium
     {
-        width: 100%;
         height: 210px;  
     }
 
     .large
     {
-        width: 100%;
         height: 240px; 
     }
 
     /* different sizes of images */
     .portrait .activities-preview-img
     {
-        width: 100%;
         height: 390px;
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
     }
 
     .small .activities-preview-img
     {
-        width: 100%;
         height: 110px; 
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
     }
 
     .smallmedium .activities-preview-img
     {
-        width: 100%;
         height: 140px; 
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
     }
 
     .bigmedium .activities-preview-img
     {
-        width: 100%;
         height: 155px; 
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
     }
 
     .large .activities-preview-img
     {
-        width: 100%;
         height: 185px; 
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
     }
 
 
 /* footer section */
 
-    /* sections in a row */
+    /* nav sections in a row */
     #footer-nav
     {
         flex-direction: row;
-        justify-content: space-around;
     }
 
     #nav-about, #nav-accommodation, #nav-assistance
@@ -858,12 +829,13 @@ font-size: 1em;
 }
 
 
-/* laptop + desktop 1200-1800px */
-@media all and (min-width:1200px)
+/* LARGE DEVICE
+tablet landscape + desktop 992-1200px */
+@media all and (min-width:992px)
 {
 /* header section */
 
-    #header
+    header
     {
         justify-content: flex-end;
         align-items: baseline;
@@ -879,31 +851,29 @@ font-size: 1em;
     }
 
     /* anchor border on top */
-    .nav-div p
+    .anchor-text
     {
         border-bottom: none; /* remove bottom border */
-        border-top: solid 3px transparent; /* top border still there but not visible*/
+        border-top: solid 3px transparent; /* top border still there but not visible */
         padding: 45px 0 0 0;
         margin: 0;
+        min-width: 112px;
     }
 
-    .nav-div:focus p
+    .nav-div:focus .anchor.text
     {
         border-bottom:none; /* remove bottom border */
         border-top: #0065FC solid 3px;
-        color: #0065FC;
     }
 
-    .nav-div:hover p
+    .nav-div:hover .anchor-text
     {
         border-bottom:none; /* remove bottom border */
         border-top: #0065FC solid 3px;
-        color: #0065FC;
     }
 
     #logo 
     {
-        width: 100px;
         margin: 0 50px;
         padding: 45px 0 0 0 ;
         order:1;
@@ -928,11 +898,6 @@ font-size: 1em;
         padding: 20px 50px;
     }
 
-    #search-box
-    {
-        margin: 15px 0 0 0 ;
-    }
-
     button[type=button] /* hide magnifying glass */
     {
         visibility: hidden;
@@ -948,6 +913,7 @@ font-size: 1em;
         width: 135px;
         height: 50px;
         color: white;
+        font-weight: bold;
         background-color: #0065FC;
         border-style: none; /* to cancel the user agent stylesheet settings */
         border-radius: 0 15px 15px 0;
@@ -961,22 +927,14 @@ font-size: 1em;
         font-size: 1.2em;
     }
 
-    #filters /* title 'filters' in line with chekboxes */
+    #filters 
     {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
         font-size: 1.1em;
     }
-
-    #filters-checkbox 
-    {
-        margin: 20px;
-    }
-
+    
     .slider
     {
-        margin: 15px;
+        margin: 0 30px 0 0;
     }
 
 
@@ -987,9 +945,7 @@ font-size: 1em;
         padding: 0 50px;
         display: flex;
         flex-direction: row-reverse; 
-        justify-content: space-between;
-        align-items:center ;
-        position: relative;
+        height: 780px;
     }
 
 
@@ -997,14 +953,14 @@ font-size: 1em;
 
     #popular-list
     {        
-        width: 31%;
+        width: 35%;
         min-width: 340px;
         flex-direction: column;
         justify-content:space-between;
         border-radius: 20px;   
     }
 
-    .div-pop1
+    .popular-preview-div
     {
         width: 100%;
         min-width: 300px;
@@ -1017,36 +973,29 @@ font-size: 1em;
 
     #accommodation-list
     {
-        width: 67%;
-        height: 572px; /* if 100%, smaller than popular by 6 px... */
+        width: 60%;
         background-color: #F2F2F2;
         border-radius: 20px;  
     }
 
-    .div-acc1
+    /* 2 previews per row */
+    .accommodation-preview-div
     {
-        width: 31%;
-        min-width: 230px;
-        max-width: 450px;
+        width: 47%;
         margin: 0;
     }
 
-    #accommodation-plus
+    #accommodation-show-more
     {
         padding: 0 10px;
     }
 
-    
+
 /* activities section */
 
     #activities-list
     {
         padding: 20px 50px 40px 50px;
-    }
-
-    .div-1,.div-23
-    {
-        width: 23%;
     }
 
 
@@ -1059,16 +1008,99 @@ font-size: 1em;
 }
 
 
-/* super large screens > 1800px */
-/* limit page width to 1800px */
-@media all and (min-width:1800px)
+/* EXTRA LARGE DEVICE 
+large desktop 1200-1800px */
+@media all and (min-width:1200px)
 {
-    body 
+/* header section */
+/* no changes */
+
+    
+/* search section */
+
+    #search-box
     {
-        max-width: 1800px;
-        margin: auto;
+        margin: 15px 0 0 0 ;
     }
+
+    #filters /* title 'filters' in line with chekboxes */
+    {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    #filters-checkbox 
+    {
+        margin: 20px;
+    }
+
+    .slider
+    {
+        margin: 12px;
+    }
+
+    #info
+    {
+
+      margin: 0 0 10px 0;
+    }
+
+
+/* accommodation and popular side by side */
+
+    #popular-accommodation
+    {
+        height: 625px;
+    }
+
+
+/* popular section */
+
+    #popular-list
+    {        
+        width: 31%; 
+    }
+
+
+/* accommodation section */
+
+    #accommodation-list
+    {
+        width: 67%; 
+    }
+
+    /* 3 previews in a row */
+    .accommodation-preview-div
+    {
+        width: 31%;
+        min-width: 230px;
+    }
+
+    
+/* activities section */
+
+    #activities-list
+    {
+        padding: 20px 50px 40px 50px;
+    }
+
+    /* 4 previews in a row */
+    .activities-1preview-div,.activities-2previews-div
+    {
+        width: 23%;
+    }
+        
 }
 
 
+/* EXTRA EXTRA LARGE DEVICE 
+super large screens + tv > 1920px */
+@media all and (min-width:1920px)
+{
+    body 
+    {
+        max-width: 1920px; /* limit page width to 1920px so previews still look ok */
+    }
+}
 
