--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ h1, h2, h3, form
     font-family: 'ralewaybold', 'arial', 'verdana', 'sans-serif';
 } 
 
+strong
+{
+    font-weight: bold;
+}
 
 ul
 {
@@ -403,7 +407,7 @@ input[type=checkbox] /* hide default checkbox */
 #popular-title
 {
     width: 100%;
-    margin: 20px 0 10px 0;
+    margin: 20px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -424,6 +428,7 @@ input[type=checkbox] /* hide default checkbox */
 {
     width: 100%;
     max-width: 450px;
+    margin: 5px auto;
 }
 
 .popular-preview
@@ -432,7 +437,6 @@ input[type=checkbox] /* hide default checkbox */
     box-shadow: 5px 5px 5px rgb(232, 232, 232);
     border-radius: 20px;
     padding: 5px;
-    margin: 5px auto;
     width: 100%; 
     height: 145px;
     position: relative;
@@ -470,7 +474,6 @@ input[type=checkbox] /* hide default checkbox */
 {
     font-size: 1em;
     margin: 0 0 15px 0;
-    font-weight: bold;
 }
 
 .popular-preview-text .hotel-price
@@ -505,7 +508,6 @@ input[type=checkbox] /* hide default checkbox */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items:center;
     position: relative;
 }
 
@@ -520,6 +522,7 @@ input[type=checkbox] /* hide default checkbox */
 {
     width: 100%;
     max-width: 450px;
+    margin: 5px auto;
 }
 
 .accommodation-preview
@@ -528,7 +531,6 @@ input[type=checkbox] /* hide default checkbox */
     box-shadow: 5px 5px 5px rgb(232, 232, 232);
     border-radius: 20px;
     padding: 5px;
-    margin: 5px auto;
     width: 100%;
     max-width: 450px;
     height: 200px;
@@ -562,7 +564,6 @@ input[type=checkbox] /* hide default checkbox */
 .accommodation-preview-text .hotel-name
 {
 font-size: 1em;
-font-weight: bold;
 }
 
 .accommodation-preview-text .hotel-price
@@ -609,7 +610,6 @@ font-weight: bold;
 {
     width: 100%;
     margin: 20px 0;
-    padding: 0 0 0 5px;
     font-size: 1.4em;
 }
 
@@ -617,6 +617,7 @@ font-weight: bold;
 {
     width: 100%;
     max-width: 450px;
+    margin: 10px auto;
 }
 
 .activities-2previews-div
@@ -632,6 +633,7 @@ font-weight: bold;
 .activities-preview-div
 {
     width: 100%;
+    margin: 10px 0;
 }
 
 .activities-preview
@@ -639,7 +641,6 @@ font-weight: bold;
     background-color: #ffffff;
     box-shadow: 5px 5px 5px rgb(232, 232, 232);
     border-radius: 20px;
-    margin: 10px auto;
     width: 100%;
     max-width: 450px;
     height: 190px;
@@ -672,7 +673,6 @@ font-weight: bold;
     vertical-align: middle; 
     padding: 0 15px;
     font-size: 1em;
-    font-weight: bold;
 }
 
 
@@ -743,7 +743,12 @@ tablet landscape + large tablet 768-992px */
     .popular-preview-div
     {
         width: 47%;
-        margin: 0 10px;
+        margin: 10px;
+    }
+
+    #popular-list
+    {
+        justify-content:space-between;
     }
 
 /* accommodation section */
@@ -751,7 +756,12 @@ tablet landscape + large tablet 768-992px */
     .accommodation-preview-div
     {
         width: 47%;
-        margin: 0 10px;
+        margin: 10px;
+    }
+
+    #accommodation-list
+    {
+        justify-content: space-between;
     }
 
 /* activities section */
@@ -759,8 +769,21 @@ tablet landscape + large tablet 768-992px */
     .activities-1preview-div,.activities-2previews-div
     {
         width: 47%;
-        margin: 0 10px ;
+        margin: 10px ;
     }
+
+    .activities-2previews-div
+    { 
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between; /* important! so top and bottom are aligned */
+    align-items:stretch;
+    }
+
+   .activities-preview-div
+   {
+    margin: 0;
+   }
 
     /* different sizes of previews */
     .portrait
@@ -946,7 +969,7 @@ tablet landscape + desktop 992-1200px */
         padding: 0 50px;
         display: flex;
         flex-direction: row-reverse; 
-        height: 780px;
+        height: 850px;
     }
 
 
@@ -956,8 +979,9 @@ tablet landscape + desktop 992-1200px */
     {        
         width: 35%;
         min-width: 340px;
-        flex-direction: column;
-        justify-content:space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items:flex-start;
         border-radius: 20px;   
     }
 
@@ -966,7 +990,7 @@ tablet landscape + desktop 992-1200px */
         width: 100%;
         min-width: 300px;
         max-width: 450px;
-        margin: 0;
+        margin: 0 0 20px 0;
     }
 
 
@@ -977,18 +1001,20 @@ tablet landscape + desktop 992-1200px */
         width: 60%;
         background-color: #F2F2F2;
         border-radius: 20px;  
+        align-items:flex-start;
     }
 
     /* 2 previews per row */
     .accommodation-preview-div
     {
         width: 47%;
-        margin: 0;
+        margin: 0 0 20px 0;
     }
 
     #accommodation-show-more
     {
         padding: 0 10px;
+        margin: 20px 0;
     }
 
 
@@ -999,6 +1025,10 @@ tablet landscape + desktop 992-1200px */
         padding: 20px 50px 40px 50px;
     }
 
+    #activities-list h2
+    {
+        padding: 0 0 0 10px;
+    }
 
 /* footer section */    
     #footer-nav
@@ -1061,6 +1091,8 @@ large desktop 1200-1800px */
     #popular-list
     {        
         width: 31%; 
+        align-items:flex-start;
+        justify-content: space-around;
     }
 
 
@@ -1069,6 +1101,12 @@ large desktop 1200-1800px */
     #accommodation-list
     {
         width: 67%; 
+        align-items:flex-start;
+    }
+
+    #accommodation-list h2
+    {
+        margin: 20px 0 15px 0;
     }
 
     /* 3 previews in a row */
